--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.6.7",
     "jose": "^5.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
