--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jose": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
